<resources>
    <string name="app_name">취향저격</string>

    <!-- Bottom Navigation Menu -->
    <string name="title_home">홈</string>
    <string name="title_search">검색</string>
    <string name="title_review">후기등록</string>
    <string name="title_mytype">나의취향</string>

    <!-- Database nodes -->
    <string name="node_users">users</string>

    <!-- 권한 화면 -->
    <string name="permission_setting_title">권한설정</string>
    <string name="permission_setting_message">앱을 실행하기 위해서는 권한 설정을 해야합니다.</string>

    <!-- 공통 -->
    <string name="close">닫기</string>
    <string name="cancel">취소</string>
    <string name="setting">설정</string>
    <string name="prev">이전</string>
    <string name="next">다음</string>
    <string name="complete">완료</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permission_setting_restart">권한을 설정하고 다시 실행해 주세요!</string>
    <string name="email">이메일</string>
    <string name="pw">비밀번호</string>
    <string name="name">이름</string>
    <string name="birth">생년월일</string>
    <string name="gender">성별</string>
    <string name="female">여자</string>
    <string name="male">남자</string>
    <string name="loading_name">취향 저격</string>
    <string name="join">가입하기</string>
    <string name="no_data">데이터가 없습니다.</string>
    <string name="title_join">회원가입</string>
    <string name="tab_story">스토리</string>
    <string name="tab_like">좋아요</string>
    <string name="tab_profile">프로필</string>
    <string name="edit">수정하기</string>
    <string name="family">가족</string>
    <string name="parents">부모님</string>
    <string name="grandparents">조부모님</string>
    <string name="friends">친구</string>
    <string name="login">로그인</string>
    <string name="receiver">받은 사람</string>
    <string name="coworker">직장동료</string>
    <string name="lover">연인</string>
    <string name="teacher">선생님</string>
    <string name="teenager">10대</string>
    <string name="twenty">20대</string>
    <string name="thirty">30대</string>
    <string name="fifty">50대</string>
    <string name="sixty">60대</string>
    <string name="seventy">70대</string>
    <string name="eighty">80대</string>
    <string name="early">초반</string>
    <string name="mid">중반</string>
    <string name="late">후반</string>
    <string name="online">온라인</string>
    <string name="offline">오프라인</string>
    <string name="input_gift_review">선물 후기를 작성해주세요.</string>
    <string name="input_review_hashtag">#으로 해쉬태그를 입력하세요.</string>
    <string name="location">위치 등록</string>
    <string name="register">등록</string>
    <string name="logout">로그아웃</string>

    <string name="sampletext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>


</resources>