<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="받은사람" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/select_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"/>
            <Button
                android:id="@+id/select_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/select_family"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/family"/>
            <Button
                android:id="@+id/select_parents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parents"/>
            <Button
                android:id="@+id/select_grandparents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grandparents"/>
            <Button
                android:id="@+id/select_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friends"/>
        </LinearLayout>


    </LinearLayout>


</ScrollView>