<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/receiver"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/btn_male"
                android:layout_width="80dp"
                android:layout_height="28dp"
                android:button="@drawable/uncheck"
                android:text="@string/male" />

            <CheckBox
                android:id="@+id/btn_female"
                android:layout_width="80dp"
                android:layout_height="28dp"
                android:button="@drawable/uncheck"
                android:text="@string/female" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryGrey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/btn_family"
                android:layout_width="80dp"
                android:layout_height="28dp"
                android:button="@drawable/uncheck"
                android:text="@string/family" />

            <CheckBox
                android:id="@+id/btn_parents"
                android:layout_width="80dp"
                android:layout_height="28dp"
                android:button="@drawable/uncheck"
                android:text="@string/parents" />

            <CheckBox
                android:id="@+id/btn_grandparents"
                android:layout_width="80dp"
                android:layout_height="28dp"
                android:button="@drawable/uncheck"
                android:text="@string/grandparents" />

            <CheckBox
                android:id="@+id/btn_friends"
                android:layout_width="80dp"
                android:layout_height="28dp"
                android:button="@drawable/uncheck"
                android:text="@string/friends" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/btn_lover"
                android:layout_width="80dp"
                android:layout_height="28dp"
                android:button="@drawable/uncheck"
                android:text="@string/lover" />

            <CheckBox
                android:id="@+id/btn_coworker"
                android:layout_width="80dp"
                android:layout_height="28dp"
                android:button="@drawable/uncheck"
                android:text="@string/coworker" />

            <CheckBox
                android:id="@+id/btn_teacher"
                android:layout_width="80dp"
                android:layout_height="28dp"
                android:button="@drawable/uncheck"
                android:text="@string/teacher" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryGrey" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/btn_teenager"
                android:layout_width="80dp"
                android:layout_height="28dp"
                android:button="@drawable/uncheck"
                android:text="@string/teenager" />

            <CheckBox
                android:id="@+id/btn_twenty"
                android:layout_width="80dp"
                android:layout_height="28dp"
                android:button="@drawable/uncheck"
                android:text="@string/twenty" />

            <CheckBox
                android:id="@+id/btn_thirty"
                android:layout_width="80dp"
                android:layout_height="28dp"
                android:button="@drawable/uncheck"
                android:text="@string/thirty" />

            <CheckBox
                android:id="@+id/btn_forty"
                android:layout_width="80dp"
                android:layout_height="28dp"
                android:button="@drawable/uncheck"
                android:text="40대" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/btn_fifty"
                android:layout_width="80dp"
                android:layout_height="28dp"
                android:button="@drawable/uncheck"
                android:text="@string/fifty" />

            <CheckBox
                android:id="@+id/btn_sixty"
                android:layout_width="80dp"
                android:layout_height="28dp"
                android:button="@drawable/uncheck"
                android:text="@string/sixty" />

            <CheckBox
                android:id="@+id/btn_seventy"
                android:layout_width="80dp"
                android:layout_height="28dp"
                android:button="@drawable/uncheck"
                android:text="@string/seventy" />

            <CheckBox
                android:id="@+id/btn_eighty"
                android:layout_width="80dp"
                android:layout_height="28dp"
                android:button="@drawable/uncheck"
                android:text="@string/eighty" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/btn_early"
                android:layout_width="80dp"
                android:layout_height="28dp"
                android:button="@drawable/uncheck"
                android:text="@string/early" />

            <CheckBox
                android:id="@+id/btn_mid"
                android:layout_width="80dp"
                android:layout_height="28dp"
                android:button="@drawable/uncheck"
                android:text="@string/mid" />

            <CheckBox
                android:id="@+id/btn_late"
                android:layout_width="80dp"
                android:layout_height="28dp"
                android:button="@drawable/uncheck"
                android:text="@string/late" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryGrey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="받은 사람의 만족도"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/seekBar_satis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="50"
            android:thumb="@drawable/male" />
        <TextView
            android:id="@+id/seekBarText_satis"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryGrey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="선물의 가격대"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_min_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="number"
                android:hint="최소가격"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textSize="20sp"
                android:text="~"/>

            <EditText
                android:id="@+id/edt_max_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="number"
                android:hint="최대가격" />
        </LinearLayout>


        <TextView
            android:id="@+id/seekBarText_price"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_round"
            android:text="필터로 검색하기" />
    </LinearLayout>
</ScrollView>


