<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.MyTypeFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <android.support.design.widget.TabLayout
            android:id="@+id/tablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:tabSelectedTextColor="@color/colorPrimary"
            app:tabTextColor="@color/colorPrimaryGrey" >
            
            <android.support.design.widget.TabItem
                android:id="@+id/tab_story"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_story"/>

            <android.support.design.widget.TabItem
                android:id="@+id/tab_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_like"/>

            <android.support.design.widget.TabItem
                android:id="@+id/tab_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_profile"/>

        </android.support.design.widget.TabLayout>
        
        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</FrameLayout>